# stormlib-rs

./: .gitmodules  Cargo.toml  README.md  bindgen.sh
.github/workflows/: rust.yml
crates/stormlib/: Cargo.toml
crates/stormlib-bindgen/: Cargo.toml
crates/stormlib-bindgen/src/: main.rs  wrapper.hpp
crates/stormlib-sys/: Cargo.toml  build.rs
crates/stormlib-sys/src/: bindings.rs  bindings_linux.rs  bindings_macos.rs  bindings_windows.rs  lib.rs
crates/stormlib/src/: constants.rs  error.rs  lib.rs  util.rs
samples/: war3map.j
