[package]
name = "stormlib-sys"
version = "0.1.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
build = "build.rs"
edition = "2018"

[dependencies]
libc = "0.2.80"
bitflags = "1.2.1"

[build-dependencies]
cmake = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winerror"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.80"
