[package]
name = "stormlib"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stormlib-sys = "0.1"
bitflags = "1.2.1"
libc = "0.2.71"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
widestring = "0.4.2"