[package]
name = "stormlib"
version = "0.1.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stormlib-sys = { path = "../stormlib-sys" }
bitflags = "1.2"
libc = "0.2"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
widestring = "0.4"
